--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,11 @@ authors = [
 ]
 description = "My program for use with the Phasmophobia video game."
 readme = "README.md"
+license = "LICENSE"
 requires-python = ">=3.8"
+dependencies = [
+    "click"
+]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
