--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ readme = "README.md"
 license = "LICENSE"
 requires-python = ">=3.8"
 dependencies = [
-    "click"
+    "click",
+    "pydantic",
+    "typing"
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
