--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,14 @@ classifiers = [
 Homepage = "https://github.com/GustavoSchip/Gusphobia"
 
 [build-system]
-requires = ["hatchling"]
+requires = [ "hatchling" ]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/gusphobia"]
+packages = [ "src/gusphobia" ]
+
+[tool.isort]
+profile = "black"
+skip_gitignore = true
+filter_files = true
+src_paths = [ "src" ]
